--- a/public/main.css
+++ b/public/main.css
@@ -136,7 +136,6 @@
 
 @font-face {
   font-family: 'Recoleta-Semibold';
-  font-style: bold;
   font-weight: 600;
   font-display: swap;
   src: url('../fonts/Latinotype - Recoleta SemiBold.otf') format("opentype");
@@ -173,9 +172,26 @@ h1, h2, h3, p {
   margin-bottom: var(--fs-24);
 }
 
+.hero-title {
+  line-height: .85;
+  font-weight: 600;
+  letter-spacing: -0.0018em;
+  font-family: Recoleta-Semibold, Georgia, serif;
+}
+
+.hero-subtitle {
+  color: var(--color-cream);
+}
+
+.base {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+
 h1 {
   color: var(--color-headers);
-  font-size: var(--fs-60);
 }
 
 h2 {
@@ -191,7 +207,7 @@ h3 {
   margin-bottom: var(--sp-hb);
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: var(--color-cream: #f3f0df);
+  color: var(--color-cream);
 }
 
 p {
@@ -232,8 +248,6 @@ hr {
   margin-bottom: var(--fs-24);
 }
 
-
-}
 
 @media screen and (min-width: 1000px) {
 
@@ -362,11 +376,6 @@ ol li {
 .button.primary:active {
   background-color: var(--color-yellow-dark);
 }
-
-.button.primary.external-link:after {
-  background-image: url(../images/external-link-black.svg);
-}
-
 
 
 .tactical {
@@ -675,8 +684,6 @@ body {
   max-width: 1200px;
   position: relative;
   z-index: 2;
-  padding-left: max(22px,env(safe-area-inset-left));
-  padding-right: max(22px,env(safe-area-inset-right));
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -846,10 +853,6 @@ body {
   background-position: top;
 }
 
-.site-navigation .menu-open-trigger:after {
-  background-image: url('../images/caret-down.svg');
-}
-
 .site-navigation .menu-close-trigger {
   display: none;
 }
@@ -858,8 +861,36 @@ body {
   opacity: 0;
 }
 
+#mainNav:after {
+   transition: all 0.3s ease-in, background 0.5s ease-in;
+  transition-delay: 0.25s;
+}
+
+.menu.ul li.menu-item:nth-child(1) {
+  transition-delay: 0.27s;
+}
+.menu.ul li.menu-item:nth-child(2) {
+  transition-delay: 0.34s;
+}
+.window .header.menu-opened ul.menu li.menu-item:nth-child(3) {
+  transition-delay: 0.41s;
+}
+.window .header.menu-opened ul.menu li.menu-item:nth-child(4) {
+  transition-delay: 0.48s;
+}
+.window .header.menu-opened ul.menu li.menu-item:nth-child(5) {
+  transition-delay: 0.55s;
+}
+.window .header.menu-opened ul.menu li.menu-item:nth-child(6) {
+  transition-delay: 0.62s;
+}
+.window .header.menu-opened ul.menu li.menu-item:nth-child(7) {
+  transition-delay: 0.69s;
+}
+
 .site-navigation .menu-close-trigger:after {
-  background-image: url('../images/caret-up.svg');
+  transition: all 0.3s ease-in, background 0.5s ease-in;
+  transition-delay: 0.25s;
 }
 
 .site-navigation .menu {
@@ -896,6 +927,8 @@ body {
 .js-enabled .site-navigation.menu-open:hover .menu,
 .js-enabled .site-navigation.menu-open:focus .menu {
   display: block;
+  transition: all 0.3s ease-in, background 0.5s ease-in;
+  transition-delay: 0.25s;
 }
 
 /* Apply purple overlay over content */
@@ -906,6 +939,8 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
+  transition: all 0.3s ease-in, background 0.5s ease-in;
+  transition-delay: 0.25s;
 }
 
 /* Hide open trigger if class 'menu-open' is attached */
@@ -1071,6 +1106,7 @@ body {
 
   .site-navigation:after {
     content: none;
+
   }
 
   .site-navigation .menu-open-trigger,
@@ -1201,18 +1237,9 @@ body {
 
 @media screen and (min-width: 1200px) {
 
-  .social-navigation li:not(:last-child) {
-    margin-right: var(--sp-b);
-  }
-
   .primary-navigation a {
     font-size: var(--fs-12);
   }
-
-  .social-navigation {
-    margin-top: 2px;
-  }
-}
 
 @media screen and (min-width: 1280px) {
 
@@ -1442,9 +1469,6 @@ body {
   padding-bottom: var(--sp-b);
 }
 
-.legal-details ul {
-  marign: 20px;
-}
 
 .site-footer .contact-details .meta-heading {
   grid-column: 1/2;
@@ -1705,13 +1729,7 @@ body {
     margin-right: auto;
   }
 
-  .hero-title {
-  font-size: 45px;
 }
-
-}
-
-
 
 @media screen and (min-width: 1000px) {
 
@@ -1786,57 +1804,11 @@ body {
   background-size: 100%;
 }
 
-.hero-graphic .boofa-0 {
-  background-image: url(../images/hero-boofa-0.png);
-}
-
-.hero-graphic .boofa-1 {
-  background-image: url(../images/hero-boofa-1.png);
-}
-
 @keyframes rotate {
   from { transform: rotate(0deg); }
   to { transform: rotate(359deg); }
 }
 
-.hero-graphic .boofa:after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 0;
-  padding-top: 100%;
-  background-image: url(../images/boofa-overlay.svg);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  opacity: 0;
-  animation-name: rotate;
-  animation-duration: 15s;
-  animation-timing-function: linear;
-  animation-direction: reverse;
-  animation-fill-mode: both;
-  animation-iteration-count: infinite;
-  transition: opacity 0.2s linear;
-}
-
-.hero-graphic .boofa:hover:after,
-.hero-graphic .boofa:focus:after {
-  opacity: 1;
-}
-
-.hero-graphic .sticker {
-  position: relative;
-  z-index: 2;
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
-
-.hero-graphic .sticker-0 {
-  grid-column: 3/4;
-  grid-row: 2/3;
-  transform: scale(1.35) translateX(-13%) translateY(-4%) rotate(4deg);
-  transform-origin: top left;
-  background-image: url(../images/hero-sticker-rescue-boofa.svg);
-}
 
 @media screen and (max-width: 750px) {
 
@@ -1852,8 +1824,6 @@ body {
   font-size: 30px;
 }
 
-  .hero-graphic .sticker-0 {
-    transform: scale(1.35) translateX(-20%) translateY(-4%) rotate(4deg);
   }
 }
 
